testsuite/tests/typecheck/should_fail/T19187.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE UndecidableInstances #-}

module T19187 where

data T

instance Eq Int => Eq T
