testsuite/tests/typecheck/should_fail/T19187.stderr

T19187.hs:8:10: error:
    • Non type-variable argument in the constraint: Eq Int
      (Use FlexibleContexts to permit this)
    • In the instance declaration for ‘Eq T’
